forth/test/fail/test_switch_arity_input_case_too_many.af
use' ../../lang.af

fun: test_switch_arity_input_case_too_many_fail { key }
  0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 key switch
    99 case end
  end
  { A B C D E F G H I J K L M N O -- }
end
